2004-10-31  Jeremy Cribb <jcribb@email.unc.edu>
	* relaxation_time_expt.m: added.  script that defines the driven bead microbead rheology experiment and places signals onto 3DFM magnets (6 pole design) for a given pole geometry. 
 	* history_dependence_expt.m: added.  same as above except for history dependence experiment type.
 	* yield_stress_pulses_expt.m: added.  same as above except for yield stress - pulses experiment type.
 	* yield_stress_ramp_expt.m: added.  same as above except for yield stress - ramp experiment type.



